# docs/swagger.json
@@ -1239,12 +1239,32 @@
         "requests.CreateTeamRequest": {
             "type": "object",
             "required": [
-                "name"
+                "end_date",
+                "goal",
+                "level",
+                "name",
+                "start_date"
             ],
             "properties": {
+                "end_date": {
+                    "type": "string",
+                    "example": "2025-03-31"
+                },
+                "goal": {
+                    "type": "string",
+                    "example": "Webアプリ開発"
+                },
+                "level": {
+                    "type": "string",
+                    "example": "beginner"
+                },
                 "name": {
                     "type": "string",
                     "example": "Aチーム"
+                },
+                "start_date": {
+                    "type": "string",
+                    "example": "2025-01-01"
                 }
             }
         },
@@ -1431,10 +1451,22 @@
                 "created_by": {
                     "type": "string"
                 },
+                "end_date": {
+                    "type": "string"
+                },
+                "goal": {
+                    "type": "string"
+                },
                 "id": {
                     "type": "string"
                 },
+                "level": {
+                    "type": "string"
+                },
                 "name": {
+                    "type": "string"
+                },
+                "start_date": {
                     "type": "string"
                 }
             }
