# response/team_response.go
@@ -5,6 +5,10 @@ import "time"
 type TeamResponse struct {
 	ID        string    `json:"id"`
 	Name      string    `json:"name"`
+	Goal      string    `json:"goal"`
+	Level     string    `json:"level"`
+	StartDate time.Time `json:"start_date"`
+	EndDate   time.Time `json:"end_date"`
 	CreatedBy string    `json:"created_by"`
 	CreatedAt time.Time `json:"created_at"`
 }
